Fix SQL bug with responsible_id column in GetAuditEvents